# azure-workflow-for-kml-satellite

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AI_ANNOTATIONS.md  ARCHITECTURE_REVIEW.md  CODE_REVIEW.md  DEEP_DIVE_SUMMARY.md  DEFENSIVE_CODE_REVIEW.md  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.orchestrator  LICENSE  LOG_TARGETS.json  Makefile  PID.md  PRODUCT_ROADMAP.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_SPEC.md  UI_REVIEW.md  _oops3  audit_madeira_data.py  ci_status.txt  data_validation_audit.py  docker-compose.yml  function_app.py  function_app_orch.py  function_registration.py  host.json  local.settings.json.template  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  image-config.env  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  task.md
.github/agents/: code-review-critic.agent.md  contract-docs-keeper.agent.md  persona-auditor.agent.md  release-safety-guard.agent.md  roadmap-orchestrator.agent.md
.github/hooks/: docs-sync.json  release-safety.json
.github/instructions/: api-contracts.instructions.md  codebase-quickref.instructions.md  engineering-standards.instructions.md  issue-tracking.instructions.md  persona-product.instructions.md  release-safety.instructions.md  verification-validation.instructions.md  website-js.instructions.md
.github/prompts/: code-review-sweep.prompt.md  docs-drift-audit.prompt.md  persona-gap-audit.prompt.md  release-gate-audit.prompt.md  roadmap-slice.prompt.md
.github/workflows/: actionlint.yml  backlog-autopilot.yml  base-image-refresh.yml  base-image.yml  ci-docs-stub.yml  ci.yml  cleanup-branches.yml  code-scanning-issues.yml  codeql.yml  deploy-static-site.yml  deploy-website-swapp.yml  deploy.yml  dev-image.yml  e2e.yml  infra.yml  infracost.yml  pr-watchdog.yml  preview-site.yml  require-linked-issue.yml  security.yml  stress-e2e.yml  tofu-apply.yml  tofu-plan.yml
blueprints/: __init__.py  _helpers.py  account.py  analysis.py  auth.py  billing.py  catalogue.py  contact.py  demo.py  eudr.py  export.py  health.py  library.py  monitoring.py  ops.py  org.py  pipeline.py  upload.py
blueprints/pipeline/: __init__.py  _aggregation.py  _blob_url.py  _helpers.py  _payloads.py  _status.py  activities.py  annotations.py  aoi_orchestrator.py  blob_trigger.py  diagnostics.py  enrichment.py  history.py  orchestrator.py  submission.py
docs/: 20260322-sitereview.md  20260413-security-review.md  3-tier-architecture.md  ACCOUNT_GDPR_GUIDE.md  ACCOUNT_USER_GUIDE.md  AI_ANNOTATIONS.md  API_INTERFACE_REFERENCE.md  APP_SHELL_HEALTH_PLAN.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REVIEW_2026-05-11.md  AZURE_DEPLOYMENT_EVIDENCE.md  BRANDING_DUE_DILIGENCE.md  BRAND_GUIDE.md  C4_ARCHITECTURE_DEEP_REVIEW.md  CODE_REVIEW.md  CODE_REVIEW_2026-04-03.md  DATA_MODEL.md  DEEP_DIVE_SUMMARY.md  EUDR_USER_JOURNEYS.md  EUDR_WORKFLOW_SPEC.md  INFRA_NAMING_STANDARD.md  LOAD_TESTING_BASELINE.md  MARKETING_PLAN.md  MODERN_PYTHON_PATTERNS.md  OPERATIONAL_READINESS_ASSESSMENT.md  OPERATIONS_RUNBOOK.md  PERSONA_DEEP_DIVE.md  PID.md  PRODUCTION_ROLLOUT_SPEC.md  PRODUCT_ROADMAP.md  PROJECT_REVIEW_2026-04-12.md  PYSTAC_API_CONTRACT.md  ROADMAP.md  SCALING_ARCHITECTURE_PLAN.md  SYSTEM_SPEC.md  UI_REVIEW.md  UX_REVIEW.md  UX_REVIEW_2026-04-12.md  launch-posts.md  openapi.yaml
docs/adr/: 0001-geospatial-base-image-strategy.md  0002-bulk-aoi-imaging-strategy.md  0003-scaling-architecture-decisions.md  0003-three-bounded-contexts.md  0004-harness-reusability.md  0005-containerised-dev-and-ci-single-path.md
docs/archive/: CODE_REVIEW.md  COMPLETED_STAGES.md  DEEP_DIVE_SUMMARY.md  PRODUCT_ROADMAP.md  (+5 more)
infra/: bootstrap-state.sh  main.bicep  main.tf  outputs.tf  resources.bicep  terraform.tfvars.example  variables.tf  versions.tf
kml_satellite/: __init__.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scripts/: __init__.py  _azurite.py  _create_user_flow.py  _graph.py  _register_ciam_app.py  _setup_ciam.py  _setup_sso_providers.py  _setup_stripe.py  backlog_autopilot.py  bootstrap_tofu_backend_and_oidc.ps1  check_dev_image_staleness.py  check_e2e_blobs.py  ci_local.sh  code_scanning_issues.py  collect_infracost_usage.py  container_smoke_test.py  dashboard.py  deploy_local.ps1  dev_server.py  e2e_config.py  e2e_scenario_test.py  e2e_smoke_gate.py  feature_flag_override.py  feature_flag_upsert.py  generate_monster_kml.py  init_storage.py  init_storage_docker.py  load_baseline.py  patch_ciam_web_redirect.py  perf_test.py  pipeline_smoke.py  pr_watchdog.py  reconcile_eventgrid_subscription.py  reconcile_trivyignore.py  redeploy_dev_tofu.ps1  reset_dev_resource_group.py  setup_ciam_deploy_access.py  setup_func_tools.sh  simulate_upload.py  sync_ciam_redirect_uris.py  (+4 more)
tests/: conftest.py  stub_provider.py  test_account_e2e.py  test_acquisition.py  test_analysis.py  test_analysis_submission_endpoints.py  test_aoi_metrics.py  test_auth.py  test_azurite_config.py  test_backlog_autopilot.py  test_batch_fallback.py  test_billing.py  test_billing_accounting.py  test_billing_endpoints.py  test_billing_ledger.py  test_catalogue.py  test_change_detection.py  test_circuit_breaker.py  test_code_scanning_issues.py  test_concurrency.py  test_config.py  test_constants.py  test_coordinate_parser.py  test_cosmos.py  test_data_sources.py  test_demo_proxy.py  test_demo_tier.py  test_determination.py  test_dev_image_staleness.py  test_dev_server.py  test_docs_route_drift.py  test_e2e_smoke_gate.py  test_email.py  test_enrichment_runner.py  test_enums.py  test_errors.py  test_eudr.py  test_eudr_billing.py  test_eudr_billing_endpoints.py  test_export.py  (+52 more)
treesight/: __init__.py  config.py  constants.py  email.py  errors.py  function_registration.py  geo.py  log.py  monitoring.py
typings/: treesight_rs.pyi
website/: README.md  api-config.json  eudr-methodology.html  index.html  kml-guide.html  palette-test.html  privacy.html  robots.txt  sitemap.xml  staticwebapp.config.json  terms.html
(+330 files in other folders)
