[project]
name = "treesight"
version = "1.0.0"
description = "Geospatial KML-to-satellite imagery pipeline"
requires-python = ">=3.11"
dependencies = [
    "azure-functions>=1.21.0",
    "azure-functions-durable>=1.2.9",
    "azure-storage-blob>=12.23.0",
    "azure-data-tables>=12.5.0",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
    "pydantic>=2.10.0",
    "fiona>=1.10.0",
    "lxml>=5.3.0",
    "rasterio>=1.4.0",
    "shapely>=2.0.0",
    "pyproj>=3.7.0",
    "pystac-client>=0.8.0",
    "planetary-computer>=1.0.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.9.0",
    "stripe>=11.0.0",
    "requests>=2.33.0",  # CVE-2026-25645: predictable temp filename
    "fpdf2>=2.8.0",
    "azure-communication-email>=1.0.0",
    "azure-cosmos>=4.9.0",
    "orjson>=3.11.6",  # CVE-2025-67221: override vulnerable base image version
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",
]
infracost = [
    "azure-identity>=1.19.0",
    "azure-monitor-query>=1.4.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-resource>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["treesight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
markers = [
    "integration: tests requiring a live Azurite instance",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["scripts/_register_ciam_app.py", "scripts/_setup_ciam.py", "scripts/_create_user_flow.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear (common pitfalls)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (no stray prints in lib code)
    "C90",   # mccabe complexity
    "RUF",   # ruff-specific rules
]
ignore = [
    "S101",    # assert used in tests
    "T201",    # print() used in scripts/
    "RUF001",  # ambiguous unicode chars in strings (σ, – intentional)
    "RUF002",  # ambiguous unicode chars in docstrings
    "RUF003",  # ambiguous unicode chars in comments
]

[tool.ruff.lint.per-file-ignores]
"function_app.py" = ["E402"]  # logging must be configured before blueprint imports
"tests/**" = ["S", "T20", "SIM117"]
"scripts/**" = ["T20", "S", "C901", "E501"]
"blueprints/analysis.py" = ["C901"]
"blueprints/pipeline.py" = ["C901"]
"blueprints/pipeline/orchestrator.py" = ["C901"]
"treesight/pipeline/enrichment/runner.py" = ["C901"]
"treesight/pipeline/enrichment/ndvi.py" = ["C901"]
"treesight/security/auth.py" = ["C901"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["treesight", "blueprints"]
exclude = ["scripts/_*"]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
]
